cloudformation/service.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Parameters": {
    "ProjectName": {
      "Type": "String"
    },
    "RolesStack": {
      "Type": "String"
    },
    "KeyName": {
      "Type": "AWS::EC2::KeyPair::KeyName"
    },
    "InstanceType": {
      "Type": "String",
      "Default": "t2.micro"
    },
    "ImageId": {
      "Type": "String",
      "Default": "ami-0a4f4704a9146742a"
    },
    "env": {
      "Type": "String",
      "Default": "dev"
    }
  },
  "Resources": {
    "WebServerSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupName": {
          "Fn::Sub": "${ProjectName}-ws-sg-${env}"
        },
        "GroupDescription": "Enable SSH access via port 22, http via 80 and https via 443",
        "SecurityGroupIngress": [{
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "80",
            "ToPort": "80",
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "443",
            "ToPort": "443",
            "CidrIp": "0.0.0.0/0"
          }
        ]
      }
    },
    "WebServer": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "InstanceType": {
          "Ref": "InstanceType"
        },
        "ImageId": {
          "Ref": "ImageId"
        },
        "KeyName": {
          "Ref": "KeyName"
        },
        "IamInstanceProfile": {
          "Fn::ImportValue": {
            "Fn::Sub": "${RolesStack}-BlogServiceInstanceProfile"
          }
        },
        "Monitoring": true,
        "SecurityGroupIds": [{
          "Ref": "WebServerSecurityGroup"
        }],
        "Tags": [{
          "Key": "Name",
          "Value": {
            "Fn::Sub": "${ProjectName}-web-server-${env}"
          }
        }]
      }
    },
    "WebElasticIp": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "InstanceId": {
          "Ref": "WebServer"
        },
        "Domain": "vpc"
      }
    }
  },
  "Outputs": {
    "WebElasticIp": {
      "Value": {
        "Ref": "WebElasticIp"
      },
      "Export": {
        "Name": {
          "Fn::Sub": "${AWS::StackName}-PublicIpAddress"
        }
      }
    },
    "WebServerSecurityGroup": {
      "Value": {
        "Ref": "WebServerSecurityGroup"
      },
      "Export": {
        "Name": {
          "Fn::Sub": "${AWS::StackName}-WebServerSecurityGroup"
        }
      }
    }
  }
}
